# neural-optimal-execution

./: .gitignore  LICENSE  Makefile  PRD.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  stress_liquidity.yaml
configs/calibrated/: AAPL_5min.yaml
configs/objectives/: cvar.yaml  mean_variance.yaml
data/: README.md
experiments/: analyze_policy_adaptivity.py  calibrate_from_intraday.py  download_yfinance_intraday.py  plot_policy_heatmaps.py  run_ac_sanity_check.py  run_baselines.py  run_full_comparison.py  run_neural_objective_comparison.py  run_seed_robustness.py  run_stress_tests.py  train_neural_policy.py
report/: README.md
results/: policy_heatmap_interpretation.md  stress_test_interpretation.md
results/models/: neural_policy.pt
results/runs/AAPL_5min_calibrated/: stress_test_interpretation.md
results/runs/AAPL_5min_calibrated_strict/: stress_test_interpretation.md
results/runs/default_synthetic/: stress_test_interpretation.md
results/tables/: ac_sanity_check.csv  baseline_metrics.csv  empirical_calibration_summary.csv  full_comparison_metrics.csv  neural_training_log.csv  seed_robustness_metrics.csv  seed_robustness_raw.csv  stress_test_metrics.csv
src/neural_optimal_execution/: __init__.py  config.py
tests/: test_calibration.py  test_environment.py  test_feasibility_outputs.py  test_metrics.py  test_neural_policy.py  test_objective_comparison.py  test_policies.py  test_policy_diagnostics.py  test_policy_heatmaps.py  test_seed_robustness.py  test_stress_tests.py
tests/fixtures/: tiny_intraday.csv
(+63 files in other folders)
